<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".home.addtask.AddTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:textColor="#FF9800"
                />

            <TextView
                android:id="@+id/newTaskText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/new_task"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/save"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="end" />

        </LinearLayout>

        <EditText
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="20dp"
            android:inputType="text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reminder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_reminder_button"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_gravity="end"
            android:textColor="#FF9800"
            app:strokeWidth="1dp"
            app:strokeColor="#FF9800"
            android:backgroundTint="@color/blackish"/>

    </LinearLayout>

</FrameLayout>
